<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/AppBarTitle"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/latestButton"
            android:text="@string/latest"
            android:textColor="@color/radio_button_textcolor_selector"
            android:textAlignment="center"
            android:checked="true"
            android:button="@android:color/transparent"
            android:background="@android:color/transparent"
            android:onClick="onRadioButtonClickHandler"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/topButton"
            android:text="@string/top"
            android:textAlignment="center"
            android:textColor="@color/radio_button_textcolor_selector"
            android:button="@android:color/transparent"
            android:background="@android:color/transparent"
            android:onClick="onRadioButtonClickHandler"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/hotButton"
            android:text="@string/hot"
            android:textAlignment="center"
            android:textColor="@color/radio_button_textcolor_selector"
            android:button="@android:color/transparent"
            android:background="@android:color/transparent"
            android:onClick="onRadioButtonClickHandler"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"/>

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp">

            <include
                android:id="@+id/gifErrorInclude"
                layout="@layout/frame_gif_error"/>

            <include
                android:id="@+id/gifInclude"
                layout="@layout/frame_gif"/>

        </com.google.android.material.card.MaterialCardView>

        <include
            android:id="@+id/errorInclude"
            layout="@layout/frame_error"/>

        <FrameLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousButton"
            android:enabled="false"
            android:text="@string/previous"
            android:onClick="onPreviousButtonClickHandler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/nextButton"
            android:text="@string/next"
            android:onClick="onNextButtonClickHandler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>


</LinearLayout>